# BigHW_Cpp

./: CMakeLists.txt  build.ps1  build_and_run.ps1  main.cpp  run.ps1  save_all.ps1
include/: Cell.h  Column.h  Database.h  Input.h  Loader.h  Query.h  Saver.h  Table.h
include/cells/: BoolCell.h  BytesCell.h  Cell.h  Cells.h  IntCell.h  StringCell.h
src/: Cell.cpp  Column.cpp  Database.cpp  Query.cpp  Table.cpp
src/cells/: BoolCell.cpp  BytesCell.cpp  Cell.cpp  IntCell.cpp  StringCell.cpp
